# bookkeeping-control-workflow-llm

./: .env.example  .gitignore  README.md  Requirements.txt  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml  docs.yml
config/: default.yaml
data/synthetic/: historical_records.json  invoices.csv
docs/: data-contract.md  it-runbook.md
src/: __init__.py  run_batch.py  run_evaluation.py  run_review_import.py
src/config/: settings.py
src/embeddings/: similarity_search.py
src/etl/: parse_invoice.py
src/evaluation/: metrics.py
src/llm/: clients.py  prompt_builder.py
src/models/: scoring.py
src/retrieval/: similarity.py
src/review/: review_io.py
src/rules/: rules_engine.py
src/utils/: hashing.py  output_writer.py  schemas.py
src/workflow/: pipeline.py
tests/: test_pipeline.py
